feat: adding new get all products route & improving api response & creating more exceptions