@@ -3,10 +3,9 @@ package br.com.itau.desafioseguros.adapters.entrypoint.api.exceptions;
 import br.com.itau.desafioseguros.application.exceptions.CommandValidationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
-
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class RestExceptionHandler {
@@ -18,7 +17,14 @@ public class RestExceptionHandler {
                         new RestValidationError(validationError.getField(),
                                 validationError.getInvalidValue(),
                                 validationError.getErrorMessage()))
-                        .collect(Collectors.toList())), HttpStatus.UNPROCESSABLE_ENTITY);
+                        .toList()), HttpStatus.UNPROCESSABLE_ENTITY);
+    }
+
+    @ExceptionHandler({HttpMessageNotReadableException.class})
+    public ResponseEntity<RestErrorResponse> handleHttpMessageNotReadableExceptionExeption(HttpMessageNotReadableException ex) {
+        return new ResponseEntity<>(new RestErrorResponse("O formato ou sintaxe da requisição está incorreta, " +
+                "verifique e tente novamente", null),
+                HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler({Exception.class})
